[package]
name = "cpu-utilization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["wrap_help", "derive"] }
clap_complete = "4.4.0"
duration-string = "0.3.0"
num = "0.4.1"
